# census-db

./: .gitignore  README.md  alembic.ini  main.py  models.py  pyproject.toml
migrations/: env.py
migrations/versions/: 010e6c2987be_added_data_tables.py  1f8ae9ced0ef_added_states_table.py  37e4a30e62dc_added_data_tables.py  83bda86e2b2f_added_data_tables.py  86428097f597_added_data_tables.py  8ba74e16e280_added_data_tables2.py  8e535d5d6953_added_tables.py  d749216def70_added_tables.py  effcb231d9b5_added_data_tables.py  fdc5f4e69eab_added_tables.py
notebooks/: scratch.ipynb
src/: inserts.py  models.py  pull.py
